Insertion of date and footer in Brazilian version.

--- a/index.html
+++ b/index.html
@@ -35,25 +35,24 @@
       <img src="./assets/domgite.png" alt="watermark" id="logo" />
     </header>
     <div id="content">
+      <div id="dia">
+        <p id="dataHora"></p>
+      </div>
       <div id="watch">
         <p id="txt"></p>
       </div>
       <div id="delimitadores">
         <div id="in">
-          <p>INÍCIO</p>
-          <input type="time" name="inicio" id="inicio" />
+          <p>INÍCIO: <input type="time" name="inicio" id="inicio" /></p>
         </div>
         <div id="fm">
-          <p>TÉRMINO</p>
-          <input type="time" name="fim" id="fim" />
+          <p>TÉRMINO: <input type="time" name="fim" id="fim" /></p>
         </div>
       </div>
     </div>
-    <!--
-    <footer>
-      <img src="./assets/bottom-image.svg" alt="watermark" />
+    <footer id="footer">
+        &copy; 2024 - <a href="https://github.com/ste-gite">Seção de Tecnologia Aplicada ao Ensino do GITE</a>
     </footer>
-    -->
   </body>
   <script src="./script.js"></script>
 </html>
