Correction of the content text.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <meta
       name="description"
-      content="Cronômetro projetado para provas, avaliações e tarefas do Grupo de Instrução Tática e Especializada da Base Aérea de Natal (GITE/BANT)."
+      content="Relógio projetado para provas, avaliações e tarefas do Grupo de Instrução Tática e Especializada da Base Aérea de Natal (GITE/BANT)."
     />
 
     <!-- Open Graph: facebook -->
